Add learnings scaffold

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,9 +3,10 @@
 <head>
   <title>Template</title>
 
-  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   <%= csrf_meta_tags %>
 </head>
 <body>
@@ -15,9 +16,10 @@
       <li><%= link_to "Sign Up", new_user_registration_path, id: "sign_up_nav_link" %></li>
       <li><%= link_to "Sign In", new_user_session_path, id: "sign_in_nav_link" %></li>
       <% if current_user %>
+        <li><%= link_to 'TIL', learnings_path, id: "learnings_nav_link" %></li>
         <li><%= link_to "My Profile", user_path(current_user), id: "profile_nav_link" %></li>
         <li><%= link_to 'Sign Out', destroy_user_session_path, :method => :delete, id: "sign_out_nav_link" %></li>
-        <li>Signed in as: <%= current_user.username %></li>
+        <li class='taco'><p>Signed in as: <%= current_user.username %></p></li>
       <% end %>
     </ul>
   </div>
@@ -25,7 +27,9 @@
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
 
-<%= yield %>
+<div class="container">
+  <%= yield %>
+</div>
 
 </body>
 </html>
