--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,13 +13,13 @@
 
   <div class="navbar-header">
     <ul class="nav navbar-nav navbar-right">
-      <li><%= link_to "Sign Up", new_user_registration_path, id: "sign_up_nav_link" %></li>
-      <li><%= link_to "Sign In", new_user_session_path, id: "sign_in_nav_link" %></li>
+      <li><%= link_to "Home", root_path, id: "root_path_nav_link" %></li>
       <% if current_user %>
         <li><%= link_to 'TIL', learnings_path, id: "learnings_nav_link" %></li>
-        <li><%= link_to "My Profile", user_path(current_user), id: "profile_nav_link" %></li>
-        <li><%= link_to 'Sign Out', destroy_user_session_path, :method => :delete, id: "sign_out_nav_link" %></li>
-        <li class='taco'><p>Signed in as: <%= current_user.username %></p></li>
+        <li><%= link_to "Signed in as: #{current_user.username}", user_path(current_user), id: "profile_nav_link" %></li>
+      <% else %>
+        <li><%= link_to "Sign Up", new_user_registration_path, id: "sign_up_nav_link" %></li>
+        <li><%= link_to "Sign In", new_user_session_path, id: "sign_in_nav_link" %></li>
       <% end %>
     </ul>
   </div>
