--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,7 @@
 <div class="container">
 
-  <h2>Hey <%= current_user.username %></h2>
+  <h2>Signed in as <%= current_user.username %></h2>
+
+  <p><%= link_to 'Sign Out', destroy_user_session_path, method: :delete, class: 'btn btn-warning', id: "user_show_sign_out_link" %></p>
 
 </div>
