Remove webpack. Hello world is hello worlding.

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,3 @@
 <div class="container">
-  <h1>Home Page!</h1>
-  <p>Find me in app/views/pages/home.html.erb</p>
+  <%= react_component("Main", {name: Learning.first.try(:description) || "world" }) %>
 </div>
-<%= react_component("Hello", {name: "World"}) %>
