--- a/app/views/learnings/index.html.erb
+++ b/app/views/learnings/index.html.erb
@@ -16,9 +16,9 @@
       <tr>
         <td><%= learning.title %></td>
         <td><%= learning.description %></td>
-        <td><%= link_to 'Show', learning %></td>
-        <td><%= link_to 'Edit', edit_learning_path(learning) %></td>
-        <td><%= link_to 'Destroy', learning, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', learning, class: 'btn btn-sm btn-success' %></td>
+        <td><%= link_to 'Edit', edit_learning_path(learning), class: 'btn btn-sm btn-warning' %></td>
+        <td><%= link_to 'Destroy', learning, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-danger' %></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +26,4 @@
 
 <br>
 
-<%= link_to 'New Learning', new_learning_path %>
+<%= link_to 'New Learning', new_learning_path, class: 'btn btn-md btn-primary' %>
