--- a/app/views/learnings/index.html.erb
+++ b/app/views/learnings/index.html.erb
@@ -2,28 +2,24 @@
 
 <h1>Listing Learnings</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @learnings.each do |learning| %>
-      <tr>
-        <td><%= learning.title %></td>
-        <td><%= learning.description %></td>
-        <td><%= link_to 'Show', learning, class: 'btn btn-sm btn-success' %></td>
-        <td><%= link_to 'Edit', edit_learning_path(learning), class: 'btn btn-sm btn-warning' %></td>
-        <td><%= link_to 'Destroy', learning, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-danger' %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
 
-<br>
+<% @learnings.each do |learning| %>
+
+<article class='learning'>
+  <span id='learning-title'><strong>Title: </strong><%= learning.title %></span>
+
+  <span><strong>Description: </strong></span>
+  <%= markdown(learning.description) %>
+
+  <div class='crud-buttons'>
+    <%= link_to 'Show', learning, class: 'btn btn-sm btn-success' %>
+    <%= link_to 'Edit', edit_learning_path(learning), class: 'btn btn-sm btn-warning' %>
+    <%= link_to 'Destroy', learning, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-danger' %>
+  </div>
+
+</article>
+
+<% end %>
 
 <%= link_to 'New Learning', new_learning_path, class: 'btn btn-md btn-primary' %>
